@@ -65,3 +65,6 @@ ingres.scrollable = 1
 
 ; Disable/enable DESCRIBE INPUT support - default is enabled
 ingres.describe = 1
+
+; The number of rows ingres_query() will try and fetch in one go
+ingres.fetch_buffer_size = 100
